--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Help</a></li>
             </ol>
-            <small>Meta © 2021</small>
+            <small>Meta Clone © 2021</small>
         </div>
     </footer>
 </body>
