--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <div class="row">
             <div class="col-logo">
+                <h1 class="logo-text">Clone</h1>
                 <img src="images/fb_logo.svg" alt="logo">
                 <h2>Facebook helps you connect and share with the people in your life.</h2>
             </div>
