--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-form">
                 <div class="form-container">
-                    <input type="text" placeholder="Email address or Phone number">
+                    <input type="email" placeholder="Email address or Phone number">
                     <input type="password" placeholder="Password">
                     <button class="btn-login">Login</button>
                     <a href="#">Forgotten password?</a>
