--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook -login or sign up</title>
+    <title>Facebook Clone -login or sign up</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
                     <input type="password" placeholder="Password">
                     <button class="btn-login">Login</button>
                     <a href="#">Forgotten password?</a>
-                    <button class="btn-new">Create New Account</button>
+                    <button class="btn-new" onclick="">Create New Account</button>
                 </div>
                 <p><a href="#">Create a Page</a> for a celebrity, brand or business.</p>
             </div>
